--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>canvas sample</title>
+    <title>canvas test</title>
     <meta charset='UTF-8' content='text/html' http-equiv='Content-Type' />
     <script src='jquery.js' type='text/javascript'></script>
     <script src='main.js' type='text/javascript'></script>
   </head>
   <body>
-    <h1>canvas sample</h1>
+    <h1>canvas test</h1>
     <div>
       Image URL :
       <input id='img_url' size='50' type='text' value='./shokai-big.jpg' />
