--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
       <input id='btn_draw' type='button' value='draw' />
     </div>
     <canvas id='img'></canvas>
+    <hr>
+      <a href='https://github.com/shokai/js-canvas-test'>https://github.com/shokai/js-canvas-test</a>
+    </hr>
   </body>
 </html>
