--- a/index.html
+++ b/index.html
@@ -9,9 +9,32 @@
   <body>
     <h1>canvas test</h1>
     <div>
-      Image URL :
-      <input id='img_url' size='50' type='text' value='./shokai-big.jpg' />
-      <input id='btn_draw' type='button' value='draw' />
+      <div>
+        Image URL :
+        <input id='img_url' size='50' type='text' value='./shokai-big.jpg' />
+        <input id='btn_draw' type='button' value='draw' />
+      </div>
+      <div id='stroke'>
+        color :
+        <select id='color'>
+          <option value='#FF0000'>red</option>
+          <option value='#00FF00'>green</option>
+          <option value='#0000FF'>blue</option>
+        </select>
+        size :
+        <select id='size'>
+          <option value='1'>1</option>
+          <option value='2'>2</option>
+          <option value='3'>3</option>
+          <option value='4'>4</option>
+          <option value='5'>5</option>
+          <option value='6'>6</option>
+          <option value='7'>7</option>
+          <option value='8'>8</option>
+          <option value='9'>9</option>
+          <option value='10'>10</option>
+        </select>
+      </div>
     </div>
     <canvas id='img'></canvas>
     <hr>
