--- a/draw/index.html
+++ b/draw/index.html
@@ -11,7 +11,7 @@
     <div>
       <div>
         Image URL :
-        <input id='img_url' size='50' type='text' value='./shokai-big.jpg' />
+        <input id='img_url' size='50' type='text' value='../shokai-big.jpg' />
         <input id='btn_draw' type='button' value='draw' />
       </div>
       <div id='stroke'>
