--- a/draw/index.html
+++ b/draw/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>canvas test</title>
     <meta charset='UTF-8' content='text/html' http-equiv='Content-Type' />
-    <script src='jquery.js' type='text/javascript'></script>
+    <script src='../jquery.js' type='text/javascript'></script>
     <script src='main.js' type='text/javascript'></script>
   </head>
   <body>
